force-app/main/default/objects/SAP_Interfaced_Data_Configuration__c/fields/Additional_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Requirements__c</fullName>
    <description>Use this field to indicate what other values are required for the selected classification</description>
    <inlineHelpText>Use this field to indicate what other values are required for the selected classification</inlineHelpText>
    <label>Additional Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost Center</fullName>
            </value>
            <value>
                <fullName>Internal Order</fullName>
            </value>
            <value>
                <fullName>Unit of Measure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>