force-app/main/default/objects/SAP_Interfaced_Data_Configuration__c/fields/Default_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Default_Unit_of_Measure__c</fullName>
    <label>Default Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_of_Measure</valueSetName>
    </valueSet>
</CustomField>