force-app/main/default/objects/SAP_Interfaced_Data_Configuration__c/fields/Sample_Order_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Order_Record_Type__c</fullName>
    <label>Sample Order Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>